force-app/main/default/objects/Receipt__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>