force-app/main/default/objects/Receipt__c/fields/Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Type__c</fullName>
    <label>Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contribution_Type</valueSetName>
    </valueSet>
</CustomField>