force-app/main/default/objects/Receipt__c/fields/Is_Receipt_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>Is_Receipt_Email_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receipt Email Send</label>
    <type>Checkbox</type>
</CustomField>