force-app/main/default/objects/Receipt__c/fields/Is_Tax_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Tax_Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tax Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>