force-app/main/default/objects/Receipt__c/fields/Is_Token_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Token_Amount_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Token Amount Received</label>
    <type>Checkbox</type>
</CustomField>