force-app/main/default/objects/Receipt__c/fields/Is_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Uploaded</label>
    <type>Checkbox</type>
</CustomField>