force-app/main/default/objects/Receipt__c/fields/Level_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Receipts (Level 1 Approver)</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>