force-app/main/default/objects/Receipt__c/fields/Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Link__c</fullName>
    <label>Public Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>