force-app/main/default/objects/Receipt__c/fields/Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Receipt</label>
    <type>Checkbox</type>
</CustomField>